@@ -14,6 +14,7 @@ SVN
                 Decode voltage interface level of DDR SDRAM
   decode-xeon: Delete
   eepromer: Fix array initialization overrun
+  i2cset: Add support for short writes with PEC
   i2c-stub-from-dump: Use udev settle to speed up initialization
 
 3.0.2 (2008-11-29)
